[package]
name = "said"
version = "0.1.2"
edition = "2018"
authors = ["Human Colossus"]
description = "Self-Addressing identifier library"
documentation = "https://github.com/thclab/sai"
homepage = "https://github.com/thclab/sai"
repository = "https://github.com/thclab/sai"
license = "Apache-2.0"
keywords = ["keri", "SAI", "identifier"]
categories = ["cryptography"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blake2 = "0.9.1"
blake3 = { version = "0.3", default-features = false }
sha2 = "0.9.3"
sha3 = "0.9.1"
base64 = "0.12"
serde = { version = "1.0" }
thiserror = "1.0"
clap = "3.0.0-beta.4"
