[package]
name = "sai_python"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sai_python"
crate-type = ["cdylib", "staticlib"]

[dependencies]
sai = { path = "../../../sai" }
cpython = { version = "0.5", features = ["extension-module"] }

[build-dependencies]
flapigen = "0.6.0-pre7"