[package]
name = "self-addressing-identifier"
version = "0.2.0"
edition = "2018"
authors = ["Human Colossus"]
description = "Self-Addressing identifier library"
documentation = "https://github.com/thclab/sai"
homepage = "https://github.com/thclab/sai"
repository = "https://github.com/thclab/sai"
license = "Apache-2.0"
keywords = ["keri", "SAI", "identifier"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
said = { path = "../../../sai" }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
